# VST3-Synth-Hampshire

./: CMakeLists.txt  README.md
include/: globalParameterState.h  hampshireController.h  hampshireGlobalParameterState.h  hampshireGlobalParameterStorage.h  hampshireIDs.h  hampshireProcessor.h  hampshireVoice.h  hampshireVoiceProcessorImplementation32.h  hampshireVoiceProcessorImplementation64.h  hampshireVoiceStatics.h  hampshireVoiceStaticsOnce.h  noteExpressionSynthController.h  noteExpressionSynthIDs.h  noteExpressionSynthProcessor.h  noteExpressionSynthVoice.h  noteExpressionSynthVoiceStatistics.h  noteExpressionSynthVoiceStatisticsOnce.h  version.h  voiceBase.h  voiceProcessor.h  voiceProcessorImplementation.h
resource/: Info.plist
source/: globalParameterState.cpp  hampshireController.cpp  hampshireFactory.cpp  hampshireGlobalParameterState.cpp  hampshireGlobalParameterStorage.cpp  hampshireProcessor.cpp  hampshireVoice.cpp  hampshireVoiceStatics.cpp  hampshireVoiceStaticsOnce.cpp  noteExpressionSynthController.cpp  noteExpressionSynthFactory.cpp  noteExpressionSynthProcessor.cpp  noteExpressionSynthVoice.cpp  noteExpressionSynthVoiceStatistics.cpp
